--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -41,6 +41,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - uses: actions/checkout@v3
+        with:
+          java-version: '17'  # Set desired Java version
       - name: Analyze with SonarQube
 
         # You can pin the exact commit or the version.
