--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -47,4 +47,8 @@ jobs:
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-        
+      with:
+        projectBaseDir: .
+        args: >
+          -Dsonar.projectKey=purrfectwarrior/bwapp
+          -Dsonar.organization=purrfectwarrior
