--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -50,5 +50,5 @@ jobs:
       with:
         projectBaseDir: .
         args: >
-          -Dsonar.projectKey=purrfectwarrior/bwapp
+          -Dsonar.projectKey=bwapp
           -Dsonar.organization=purrfectwarrior
