--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -50,7 +50,7 @@ jobs:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         args: >
           -Dsonar.organization=purrfectwarrior
-          -Dsonar.projectKey=bwapp
+          -Dsonar.projectKey=purrfectwarrior_bwapp
           -Dsonar.python.coverage.reportPaths=coverage.xml
           -Dsonar.sources=lib/
           -Dsonar.tests=tests/
