--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -47,6 +47,10 @@ jobs:
     - name: SonarQube Scan
       uses: sonarsource/sonarcloud-github-action@v4.0.0 # Ex: v4.0.0, See the latest version at https://github.com/marketplace/actions/sonarcloud-scan
       env:
+        
+        # Inherit project and organization from environment variables
+        SONAR_PROJECT_KEY: ${{ env.SONAR_PROJECT_KEY }}
+        SONAR_ORGANIZATION: ${{ env.SONAR_ORGANIZATION }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         args: >
           -Dsonar.organization=purrfectwarrior
