--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -52,4 +52,11 @@ jobs:
         SONAR_PROJECT_KEY: purrfectwarrior_bwapp
         SONAR_ORGANIZATION: purrfectwarrior
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        
+        args: >
+          -Dsonar.organization=purrfectwarrior
+          -Dsonar.projectKey=purrfectwarrior_bwapp
+          -Dsonar.python.coverage.reportPaths=coverage.xml
+          -Dsonar.sources=lib/
+          -Dsonar.tests=tests/
+          -Dsonar.test.exclusions=tests/**
+          -Dsonar.verbose=true
