--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -46,17 +46,19 @@ jobs:
         fetch-depth: 0
     - name: SonarQube Scan
       uses: sonarsource/sonarcloud-github-action@v4.0.0 # Ex: v4.0.0, See the latest version at https://github.com/marketplace/actions/sonarcloud-scan
+      with:
+        projectBaseDir: bWAPP
+        args: >
+            -Dsonar.organization=purrfectwarrior
+            -Dsonar.projectKey=purrfectwarrior_bwapp
+            -Dsonar.python.coverage.reportPaths=coverage.xml
+            -Dsonar.sources=lib/
+            -Dsonar.tests=tests/
+            -Dsonar.test.exclusions=tests/**
+            -Dsonar.verbose=true
       env:
-        
         # Inherit project and organization from environment variables
         SONAR_PROJECT_KEY: purrfectwarrior_bwapp
         SONAR_ORGANIZATION: purrfectwarrior
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        args: >
-          -Dsonar.organization=purrfectwarrior
-          -Dsonar.projectKey=purrfectwarrior_bwapp
-          -Dsonar.python.coverage.reportPaths=coverage.xml
-          -Dsonar.sources=lib/
-          -Dsonar.tests=tests/
-          -Dsonar.test.exclusions=tests/**
-          -Dsonar.verbose=true
+  
